fixed overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
-body{
+body {
   margin: 0;
   padding: 0;
   color: #545F7D;
   scrollbar-width: thin;
   font-family: "Work Sans", sans-serif;
+}
+
+
+@media screen and (max-width: 850px) {
+  body, html {
+    overflow-x: hidden;
+  }
 }
